fix: .images.left spacing

--- a/style/post.css
+++ b/style/post.css
@@ -346,6 +346,7 @@
   float: left;
   padding-right: 16px;
   margin: 0;
+  margin-bottom: 64px;
   width: unset;
 }
 
